--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!--Navbar-->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <img src="/Obrazky/karikatura_logo.png" alt="Logo" width="30" class="d-inline-block align-text-top">
+      <img src="/Obrazky/karikatura_logo.png" alt="Logo" class="d-inline-block align-text-top logomenu">
       Bootstrap
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
