--- a/index.html
+++ b/index.html
@@ -18,23 +18,34 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
       <img src="/Obrazky/karikatura_logo.png" alt="Logo" class="d-inline-block align-text-top logomenu">
-      Bootstrap
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarText">
+      <div class="collapse navbar-collapse transparent" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">O nás</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="#">Denní menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#">Jidelní lístek</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Nápojový lístek</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Kontakt</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Rezervace</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">FAQ</a>
           </li>
         </ul>
-        <button class="btn btn-outline-success me-2" type="button">Main button</button>
+        <button class="btn btn-outline-success me-2 menurezervace" type="button">Rezervovat stůl</button>
       </div>
     </div>
   </nav>
