--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!--uvod a o nas pro pc-->
     <div class="parent">
         <div class="div1">
-            <img src="Obrazky/interier_karikatury.jpg" class="interier">
+            <img src="Obrazky/interier_karikatury-min.jpg" class="interier">
         </div>
         <div class="div2">
             <h1 class="uvody">Vítejte v Karikatuře</h1>
@@ -53,7 +53,7 @@
             <p class="texty-uvody">Přijďte ochutnat nejen výborné jídlo, ale také atmosféru plnou vůní, barev a dobrodružství na každém talíři.</p>
         </div>
         <div class="div3">
-            <img src="Obrazky/vegan_food_clear.png" alt="" class="veganplate">
+            <img src="Obrazky/vegan_food_clear.webp" alt="" class="veganplate">
         </div>
         <div class="div4">
             <h1 class="uvody">O nás</h1>
