uprava hlavnich snad

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
             <button onclick="showCategory('all')">Vše</button>
             <button onclick="showCategory('predkrm')">Předkrmy</button>
             <button onclick="showCategory('polevka')">Polévky</button>
-            <button onclick="showCategory('hlavnijidla')">Hlavní jídla</button>
+            <button onclick="showCategory('hlavni')">Hlavní jídla</button>
             <button onclick="showCategory('dezert')">Dezerty</button>
         </div>
         <div class="menu">
             <div id="predkrm" class="category"></div>
             <div id="polevka" class="category"></div>
-            <div id="hlavnijidla" class="category"></div>
+            <div id="hlavni" class="category"></div>
             <div id="dezert" class="category"></div>
         </div>
 </section>
