--- a/index.html
+++ b/index.html
@@ -152,7 +152,16 @@
             </svg>
         </div>
         <div class="answer">
-          <p>Prozatím</p>
+          <div class="menu">
+            <h1>Předkrmy</h1><br>
+            <div id="predkrm" class="category"></div>
+            <h1>Polévky</h1><br>
+            <div id="polevka" class="category"></div>
+            <h1>Hlavní chody</h1><br>
+            <div id="hlavni" class="category"></div>
+            <h1>Dezerty</h1><br>
+            <div id="dezert" class="category"></div>
+          </div>
         </div>
     </div>
 
