--- a/index.html
+++ b/index.html
@@ -116,9 +116,7 @@
   <div id="polevka" class="category"></div>
   <div id="hlavni" class="category"></div>
   <div id="dezert" class="category"></div>
-</div>
-        <!-- Menu - Show by btn-->
-        
+</div>  
 </section>
 <!--Konec - Nabídka jídla varianta 1-->
 <!--Menu accordion-->
@@ -526,4 +524,5 @@
 
 <script src="JS/index.js"></script>
 <script src="JS/menu.js"></script>
+<script src="JS/vyber.js"></script>
 <script src="https://kit.fontawesome.com/40b2aa2c26.js" crossorigin="anonymous"></script>
