--- a/index.html
+++ b/index.html
@@ -150,16 +150,22 @@
             </svg>
         </div>
         <div class="answer">
-          <div class="menu">
-            <h1>Předkrmy</h1><br>
-            <div id="predkrm" class="category"></div>
-            <h1>Polévky</h1><br>
-            <div id="polevka" class="category"></div>
-            <h1>Hlavní chody</h1><br>
-            <div id="hlavni" class="category"></div>
-            <h1>Dezerty</h1><br>
-            <div id="dezert" class="category"></div>
-          </div>
+          <section class="menu-jidlo">
+            <h1 id="menu">Nabídka</h1>
+            <div class="vyber">
+              <button onclick="showCategory('all')">Vše</button>
+              <button onclick="showCategory('predkrm')">Předkrmy</button>
+              <button onclick="showCategory('polevka')">Polévky</button>
+              <button onclick="showCategory('hlavni')">Hlavní jídla</button>
+              <button onclick="showCategory('dezert')">Dezerty</button>
+            </div>
+            <div class="menu">
+              <div id="predkrm" class="category"></div>
+              <div id="polevka" class="category"></div>
+              <div id="hlavni" class="category"></div>
+              <div id="dezert" class="category"></div>
+            </div>  
+            </section>
         </div>
     </div>
 
