--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--menu pro pc-->
     <header>
         <div class="navbar">
-            <div class="logo"><a href="Obrazky/karikatura_logo.png"></a></div>
+            <div class="logo"><a href="#"><img src="Obrazky/karikatura_logo.png"></a></div>
             <ul class="links">
                 <li><a href="onas">O nás</a></li>
                 <li><a href="nabidka">Naše nabídka</a></li>
