--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--menu pro pc-->
     <header>
         <div class="navbar">
-            <div class="logo"><img src="Obrazky/karikatura_logo.png"></div>
+            <div class="logo"><img class="logofoto" src="Obrazky/karikatura_logo.png"></div>
             <ul class="links">
                 <li><a href="onas">O nás</a></li>
                 <li><a href="nabidka">Naše nabídka</a></li>
