zkouška opravy accorrdu

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <svg width="20" height="10" viewBox="0 0 42 25" class="svg1">
                 <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
             </svg>
-            <h2 id="datumjidelnicku"></h2>
+            <h2 id="datumjidelnicku" class="kliknisem"></h2>
             <svg width="20" height="10" viewBox="0 0 42 25" class="svg2">
                 <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
             </svg>
@@ -145,7 +145,7 @@
             <svg width="20" height="10" viewBox="0 0 42 25" class="svg1">
                 <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
             </svg>
-            <h2>Stálý jídelní lístek</h2>
+            <h2 class="kliknisem">Stálý jídelní lístek</h2>
             <svg width="15" height="10" viewBox="0 0 42 25" class="svg2">
                 <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
             </svg>
@@ -175,7 +175,7 @@
             <svg width="20" height="10" viewBox="0 0 42 25" class="svg1">
                 <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
             </svg>
-            <h2>Nápojový lístek</h2>
+            <h2 class="kliknisem">Nápojový lístek</h2>
             <svg width="15" height="10" viewBox="0 0 42 25" class="svg2">
                 <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
             </svg>
