--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="CSS/global.css">
     <link rel="stylesheet" href="CSS/index.css">
     <link rel="stylesheet" href="CSS/menu.css">
+    <link rel="stylesheet" href="CSS/obedovanabidka.css">
 </head>
 <body>
     <!--menu pro pc-->
@@ -526,10 +527,18 @@
         </div>
   </section>
 
+  <div id="lunchSpecial" class="special-offer">
+    <h2>Obědová nabídka</h2>
+    <p>Dnešní speciální nabídka:<br><span id="specialItem">Předkrm: Banánový chlebík s hummusem z červené řepy a salátkem<br>Polévka: Brokolicovo-chřestový krém<br>Hlavní jídlo: Čočkovo-citronová kaše s kuřecím filetem a pečenou zeleninou<br>Dezert: Karobový fondant s mangovým sorbetem</span></p>
+    <p id="timer"></p>
+    <button id="closeBtn" class="close-btn">&times;</button>
+  </div>
+
 </body>
 </html>
 
 <script src="JS/index.js"></script>
 <script src="JS/menu.js"></script>
 <script src="JS/vyber.js"></script>
+<script src="JS/obedovanabidka.js"></script>
 <script src="https://kit.fontawesome.com/40b2aa2c26.js" crossorigin="anonymous"></script>
