--- a/index.html
+++ b/index.html
@@ -529,7 +529,11 @@
 
   <div id="lunchSpecial" class="special-offer">
     <h2>Obědová nabídka</h2>
-    <p>Dnešní speciální nabídka:<br><span id="specialItem">Předkrm: Banánový chlebík s hummusem z červené řepy a salátkem<br>Polévka: Brokolicovo-chřestový krém<br>Hlavní jídlo: Čočkovo-citronová kaše s kuřecím filetem a pečenou zeleninou<br>Dezert: Karobový fondant s mangovým sorbetem</span></p>
+    <p>Dnešní speciální nabídka:<br>
+      <span id="typjidla">Předkrm:</span> <span id="specialItem">Banánový chlebík s hummusem z červené řepy a salátkem</span><br>
+      <span id="typjidla">Polévka:</span> <span id="specialItem">Brokolicovo-chřestový krém</span><br>
+      <span id="typjidla">Hlavní jídlo:</span> <span id="specialItem">Čočkovo-citronová kaše s kuřecím filetem a pečenou zeleninou</span><br>
+      <span id="typjidla">Dezert:</span> <span id="specialItem">Karobový fondant s mangovým sorbetem</span></p>
     <p id="timer"></p>
     <button id="closeBtn" class="close-btn">&times;</button>
   </div>
