--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <h3>Take-Away</h3>
     </div>
 </div>
-<!--Nabídka jídla varianta 1-->
+<!--Nabídka jídla-->
 <section class="menu-jidlo">
 <h1 id="menu">Nabídka</h1>
 <div class="vyber">
@@ -112,80 +112,17 @@
   <button onclick="showCategory('polevka')">Polévky</button>
   <button onclick="showCategory('hlavni')">Hlavní jídla</button>
   <button onclick="showCategory('dezert')">Dezerty</button>
+  <button onclick="showCategory('napoje')">Nápoje</button>
 </div>
 <div class="menu">
   <div id="predkrm" class="category"></div>
   <div id="polevka" class="category"></div>
   <div id="hlavni" class="category"></div>
   <div id="dezert" class="category"></div>
+  <div id="napoje" class="category"></div>
 </div>  
 </section>
-<!--Konec - Nabídka jídla varianta 1-->
-<!--Menu accordion-->
-<hr>
-<section class="nabidka">
-    <h2 class="nabidkanadpis">Podívejte se na naší nabídku</h2>
-
-    <div class="nabidky">
-        <div class="question">
-            <svg width="20" height="10" viewBox="0 0 42 25" class="svg1">
-                <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
-            </svg>
-            <h2 id="datumjidelnicku" class="kliknisem"></h2>
-            <svg width="20" height="10" viewBox="0 0 42 25" class="svg2">
-                <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
-            </svg>
-        </div>
-        <div class="answer">
-            <p>Prozatím</p>
-        </div>
-    </div>
-
-    <div class="nabidky">
-        <div class="question">
-            <svg width="20" height="10" viewBox="0 0 42 25" class="svg1">
-                <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
-            </svg>
-            <h2 class="kliknisem">Stálý jídelní lístek</h2>
-            <svg width="15" height="10" viewBox="0 0 42 25" class="svg2">
-                <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
-            </svg>
-        </div>
-        <div class="answer">
-          <section class="menu-jidlo">
-            <h1 id="menu">Nabídka</h1>
-            <div class="vyber">
-              <button onclick="showCategory('all')">Vše</button>
-              <button onclick="showCategory('predkrm')">Předkrmy</button>
-              <button onclick="showCategory('polevka')">Polévky</button>
-              <button onclick="showCategory('hlavni')">Hlavní jídla</button>
-              <button onclick="showCategory('dezert')">Dezerty</button>
-            </div>
-            <div class="menu">
-              <div id="predkrm" class="category"></div>
-              <div id="polevka" class="category"></div>
-              <div id="hlavni" class="category"></div>
-              <div id="dezert" class="category"></div>
-            </div>  
-            </section>
-        </div>
-    </div>
-
-    <div class="nabidky">
-        <div class="question">
-            <svg width="20" height="10" viewBox="0 0 42 25" class="svg1">
-                <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
-            </svg>
-            <h2 class="kliknisem">Nápojový lístek</h2>
-            <svg width="15" height="10" viewBox="0 0 42 25" class="svg2">
-                <path d="M3 3L21 21L39 3" stroke="white" stroke-width="7" stroke-linecap="round"/>
-            </svg>
-        </div>
-        <div class="answer">
-            <p>Prozatím</p>
-        </div>
-    </div>
-</section>
+<!--Konec - Nabídka jídla-->
 
 <!--recenze-->
 <hr>
