--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <button onclick="showCategory('napoje')">Nápoje</button>
 </div>
 <div class="menu">
-  <div id="predkrm" class="category"><h2>Předkrmy:<br></h2></div>
+  <div id="predkrm" class="category"></div>
   <div id="polevka" class="category"></div>
   <div id="hlavni" class="category"></div>
   <div id="dezert" class="category"></div>
