--- a/index.html
+++ b/index.html
@@ -463,6 +463,15 @@
         <img src="Obrazky/foto-tymu.jpg" class="fototymu2-mob">
       </div>
         </div>
+
+      <footer>
+          <div class="footer">
+              <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+              <a href="https://www.twitter.com/"><i class="fa fa-twitter"></i></a>
+          </div>
+          <p>&copy; 2024 Karikatura</p>
+      </footer>
   </section>
 
   <div id="lunchSpecial" class="special-offer">
