--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="kontakt">Kontakt</a></li>
     </div>
 
+    <main>
 <!--uvod a o nas pro pc-->
     <div class="parent">
         <div class="div1">
@@ -463,15 +464,6 @@
         <img src="Obrazky/foto-tymu.jpg" class="fototymu2-mob">
       </div>
         </div>
-<br>
-      <footer>
-          <div class="footer">
-              <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
-              <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
-              <a href="https://www.twitter.com/"><i class="fa fa-twitter"></i></a>
-          </div>
-          <p>&copy; 2024 Karikatura</p>
-      </footer>
   </section>
 
   <div id="lunchSpecial" class="special-offer">
@@ -484,6 +476,17 @@
     <p id="timer"></p>
     <button id="closeBtn" class="close-btn">&times;</button>
   </div>
+
+</main>
+
+<footer>
+  <div class="footer">
+      <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+      <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+      <a href="https://www.twitter.com/"><i class="fa fa-twitter"></i></a>
+  </div>
+  <p>&copy; 2024 - Karikatura</p>
+</footer>
 
 </body>
 </html>
