možná funguje menu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="logo">Karikatura</div>
             <ul class="links">
                 <li><a href="onas">O nás</a></li>
-                <li><a href="nabidka">Naše nabídka</a></li>
+                <li><a href="menu-jidlo">Naše nabídka</a></li>
                 <li><a href="recenze">Recenze</a></li>
                 <li><a href="faq">FAQ</a></li>
                 <li><a href="rezervace">Rezervace</a></li>
@@ -59,12 +59,14 @@
         <div class="div3">
             <img src="Obrazky/vegan_food_clear.webp" alt="" class="veganplate">
         </div>
+        <section id="onas">
         <div class="div4">
             <h1 class="uvody">O nás</h1>
             <p class="texty-uvody">Jsme váš gastronomický ráj, kde se váš vkus spojuje s naší vášní pro zdravé a vynikající jídlo. Na trh jsme přišli s touhou změnit svět.<br>V naší restauraci nejenže vaříme, ale také tvoříme - s láskou a kreativitou - alternativně.
             </p>
             <p class="texty-uvody">Naše filozofie je jednoduchá: přinést vám to nejlepší z orientální kuchyně v kombinaci s moderním přístupem k zdravému stravování. Každý pokrm, který opouští naši kuchyni, je pečlivě připraven s ohledem na kvalitu surovin a vaše potěšení z každého sousta.</p>
         </div>
+        </section>
     </div>
 
 <!--uvod a o nas pro tablet a mobil-->
@@ -79,10 +81,12 @@
     <div class="mob-div3">
         <img src="Obrazky/vegan_food_clear.webp" alt="" class="veganplate-mob">
     </div>
+    <section id="onas">
     <div class="mob-div4">
         <h1>O nás</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi deleniti nam amet dolore eveniet. Quibusdam exercitationem officiis harum facere, autem sunt at, mollitia cupiditate, repellendus nihil ipsa tenetur placeat? Explicabo.</p>
     </div>
+    </section>
 </div>
 
 <!--ikonky s popisy-->
@@ -128,6 +132,7 @@
 
 <!--recenze-->
 <hr>
+<section id="recenze">
 <h2 class="recenzenadpis">Recenze našich zákazníků</h2>
 <div class="outerdiv">
     <div class="innerdiv">
@@ -231,9 +236,11 @@
       <!--konec divu4-->
     </div>
   </div>
+</section>
 <!--konec recenzí-->
 <!--FAQ-->
 <hr>
+<section id="faq">
 <section class="faq">
     <h2 class="faqnadpis">Časté dotazy</h2>
     <div>
@@ -290,8 +297,10 @@
 
     </div>
 </section>
+</section>
 <!--konec FAQ-->
 <!--Rezervační formulář-->
+<section id="rezervace">
 <form>
   <h1>Rezervace</h1>
   <div class="form-floating mb-3">
@@ -373,10 +382,12 @@
 
   <div class="rezervujeme2"><button type="submit" class="rezervujeme">Odeslat rezervaci</button></div>
 </form>
+</section>
 <!--Konec - Rezervační formulář-->
 
 <!--Kontakty-->
 <hr>
+<section id="kontakt">
 <section class="kontakty-velke">
 <div class="kontaktwrap">
 <div class="outerkon">
@@ -420,9 +431,11 @@
       <img src="Obrazky/foto-tymu.jpg" class="fototymu2">
     </div>
   </section>
+</section>
 <!--Kontakty - konec-->
 
 <!--Kontakty - mobil-->
+<section id="kontakt">
 <section class="kontakty-male">
 <div class="kontaktwrap-mob">
   <div class="outerkon-mob">
@@ -465,6 +478,9 @@
       </div>
         </div>
   </section>
+</section>
+
+<!--Konec kontaktů-->
 
   <div id="lunchSpecial" class="special-offer">
     <h2>Obědová nabídka</h2>
