--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <div class="navbar">
             <div class="logo">Karikatura</div>
             <ul class="links">
-                <li><a href="onas">O nás</a></li>
-                <li><a href="menu-jidlo">Naše nabídka</a></li>
-                <li><a href="recenze">Recenze</a></li>
-                <li><a href="faq">FAQ</a></li>
-                <li><a href="rezervace">Rezervace</a></li>
-                <li><a href="kontakt">Kontakt</a></li>
+                <li><a href="#onas">O nás</a></li>
+                <li><a href="#nabidka">Naše nabídka</a></li>
+                <li><a href="#recenze">Recenze</a></li>
+                <li><a href="#faq">FAQ</a></li>
+                <li><a href="#rezervace">Rezervace</a></li>
+                <li><a href="#kontakt">Kontakt</a></li>
             </ul>
             <a href="#" class="action_btn">Rezervovat stůl</a>
             <div class="toggle_btn">
@@ -36,12 +36,12 @@
 
     <!--menu pro mobil-->
     <div class="dropdown_menu">
-        <li><a href="onas">O nás</a></li>
-        <li><a href="nabidka">Naše nabídka</a></li>
-        <li><a href="recenze">Recenze</a></li>
-        <li><a href="faq">FAQ</a></li>
-        <li><a href="rezervace">Rezervace</a></li>
-        <li><a href="kontakt">Kontakt</a></li>
+        <li><a href="#onas">O nás</a></li>
+        <li><a href="#nabidka">Naše nabídka</a></li>
+        <li><a href="#recenze">Recenze</a></li>
+        <li><a href="#faq">FAQ</a></li>
+        <li><a href="#rezervace">Rezervace</a></li>
+        <li><a href="#kontakt">Kontakt</a></li>
     </div>
 
     <main>
@@ -110,6 +110,7 @@
 </div>
 <hr>
 <!--Nabídka jídla-->
+<section id="nabidka">
 <section class="menu-jidlo">
 <h1 id="menu">Nabídka</h1>
 <div class="vyber">
@@ -127,6 +128,7 @@
   <div id="dezert" class="category"></div>
   <div id="napoje" class="category"></div>
 </div>  
+</section>
 </section>
 <!--Konec - Nabídka jídla-->
 
