--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#rezervace">Rezervace</a></li>
                 <li><a href="#kontakt">Kontakt</a></li>
             </ul>
-            <a href="#" class="action_btn">Rezervovat stůl</a>
+            <a href="#rezervace" class="action_btn">Rezervovat stůl</a>
             <div class="toggle_btn">
                 <i class="fa-solid fa-bars"></i>
             </div>
