funkce rezervace formu?

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 <!--konec FAQ-->
 <!--Rezervační formulář-->
 <section id="rezervace">
-<form>
+<form action="zpracovani_rezervace.php" method="post">
   <h1>Rezervace</h1>
   <div class="form-floating mb-3">
     <label for="name">Jméno a příjmení</label><br>
