--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
     </div>
     <div class="mob-div2">
         <h1>Vítejte v Karikatuře</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia fugit nihil nulla consequuntur aperiam tempore architecto, amet minus nostrum quidem repellat! Id, quaerat! Natus dolorum aut deserunt assumenda quibusdam ex.</p>
+        <p class="texty-uvody">Vítejte v naší restauraci, kde se spojuje chuť, zdraví a kreativita!</p>
+        <p class="texty-uvody">V našem menu najdete nejen lahodné pokrmy, ale také zdravé a vyvážené varianty. Máme radost představit vám naše exotické i tradiční pokrmy, které podtrhnou pestrost naší nabídky. Ať už jste milovníkem alternativních, veganských či tradičních pokrmů, u nás si přijdete na své.</p>
+        <p class="texty-uvody">Přijďte ochutnat nejen výborné jídlo, ale také atmosféru plnou vůní, barev a dobrodružství na každém talíři.</p>
     </div>
     <div class="mob-div3">
         <img src="Obrazky/vegan_food_clear.webp" alt="" class="veganplate-mob">
@@ -84,7 +86,9 @@
     <section id="onas">
     <div class="mob-div4">
         <h1>O nás</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi deleniti nam amet dolore eveniet. Quibusdam exercitationem officiis harum facere, autem sunt at, mollitia cupiditate, repellendus nihil ipsa tenetur placeat? Explicabo.</p>
+        <p class="texty-uvody">Jsme váš gastronomický ráj, kde se váš vkus spojuje s naší vášní pro zdravé a vynikající jídlo. Na trh jsme přišli s touhou změnit svět.<br>V naší restauraci nejenže vaříme, ale také tvoříme - s láskou a kreativitou - alternativně.
+        </p>
+        <p class="texty-uvody">Naše filozofie je jednoduchá: přinést vám to nejlepší z orientální kuchyně v kombinaci s moderním přístupem k zdravému stravování. Každý pokrm, který opouští naši kuchyni, je pečlivě připraven s ohledem na kvalitu surovin a vaše potěšení z každého sousta.</p>
     </div>
     </section>
 </div>
