--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 <!--konec FAQ-->
 <!--Rezervační formulář-->
 <section id="rezervace">
-<form action="index.php" method="post">
+<form action="PHP/index.php" method="post">
   <h1>Rezervace</h1>
   <div class="form-floating mb-3">
     <label for="name">Jméno a příjmení</label><br>
